--- a/.gitignore
+++ b/.gitignore
@@ -18,14 +18,14 @@ artifacts/
 # Multi-project specific build outputs
 */bin/
 */obj/
-PortfolioAnalyzer.Core/bin/
-PortfolioAnalyzer.Core/obj/
-PortfolioAnalyzer.Console/bin/
-PortfolioAnalyzer.Console/obj/
-PortfolioAnalyzer.Api/bin/
-PortfolioAnalyzer.Api/obj/
-PortfolioAnalyzer.Tests/bin/
-PortfolioAnalyzer.Tests/obj/
+backend/PortfolioAnalyzer.Core/bin/
+backend/PortfolioAnalyzer.Core/obj/
+backend/PortfolioAnalyzer.Console/bin/
+backend/PortfolioAnalyzer.Console/obj/
+backend/PortfolioAnalyzer.Api/bin/
+backend/PortfolioAnalyzer.Api/obj/
+backend/PortfolioAnalyzer.Tests/bin/
+backend/PortfolioAnalyzer.Tests/obj/
 
 # Test Results
 TestResults/
@@ -86,16 +86,59 @@ appsettings.*.json
 *.sqlite
 *.sqlite3
 
-# Node modules (for future frontend)
+# Node modules
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Build artifacts
+# Frontend environment files
+.env.local
+.env.*.local
+!.env.example
+
+# Frontend build/cache
 dist/
 build/
 out/
+.vite/
+.turbo/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
+
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+*.tsbuildinfo
+
+
+# Frontend misc
+*.local
 
 # Claude Code project notes
 claude.md
