--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "chart.js": "^4.5.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
+    "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
