Updated subdomain to correct name

--- a/backend/PortfolioAnalyzer.Api/appsettings.json
+++ b/backend/PortfolioAnalyzer.Api/appsettings.json
@@ -14,7 +14,7 @@
       "http://localhost:5173",
       "http://localhost:3000",
       "https://portfolio-analyzer.vercel.app",
-      "https://pf.hpersson.com"
+      "https://slowfin.hpersson.com"
     ]
   },
   "IpRateLimiting": {
@@ -23,7 +23,7 @@
     "RealIpHeader": "X-Real-IP",
     "ClientIdHeader": "X-ClientId",
     "HttpStatusCode": 429,
-    "GeneralRules": [
+    "GeneralRules": 
       {
         "Endpoint": "*:/api/portfolio/price/*",
         "Period": "1m",
