fixed typo in appsettings

--- a/backend/PortfolioAnalyzer.Api/appsettings.json
+++ b/backend/PortfolioAnalyzer.Api/appsettings.json
@@ -12,8 +12,6 @@
   "Cors": {
     "AllowedOrigins": [
       "http://localhost:5173",
-      "http://localhost:3000",
-      "https://portfolio-analyzer.vercel.app",
       "https://slowfin.hpersson.com"
     ]
   },
@@ -23,21 +21,11 @@
     "RealIpHeader": "X-Real-IP",
     "ClientIdHeader": "X-ClientId",
     "HttpStatusCode": 429,
-    "GeneralRules": 
-      {
-        "Endpoint": "*:/api/portfolio/price/*",
-        "Period": "1m",
-        "Limit": 30
-      },
-      {
-        "Endpoint": "*:/api/portfolio/calculate",
-        "Period": "1m",
-        "Limit": 10
-      },
+    "GeneralRules": [
       {
         "Endpoint": "*",
-        "Period": "1h",
-        "Limit": 1000
+        "Period": "1m",
+        "Limit": 100
       }
     ]
   }
